ФЗ-7Ñ v1.1